--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
       <section id="todoapp">
         <header id="header">
           <h1>todos</h1>
-          <input type="text" id="new-todo" placeholder="What needs to be done?" />
+          {{input type="text" id="new-todo" placeholder="What needs to be done?" value=NewTitle
+            action="createTodo" }}
         </header>
 
         <section id="main">
           <ul id="todo-list">
             {{#each}}
-              <li>
+              <li {{bind-attr class="isCompleted:completed"}}>
                 <input type="checkbox" class="toggle">
                 <label>{{title}}</label><button class="destroy"></button>
               </li>
