--- a/index.html
+++ b/index.html
@@ -10,31 +10,19 @@
       <section id="todoapp">
         <header id="header">
           <h1>todos</h1>
-          {{input type="text" id="new-todo" placeholder="What needs to be done?" value=newTitle
+          {{ input type="text" id="new-todo" placeholder="What needs to be done?" value=newTitle
             action="createTodo" }}
         </header>
 
         <section id="main">
-          <ul id="todo-list">
-            {{#each itemController="todo"}}
-              <li {{bind-attr class="isCompleted:completed isEditing:editing"}}>
-                {{#if isEditing}}
-                  {{edit-todo class="edit" value=title focus-out="updateTodo" insert-newline="updateTodo" }}
-                {{else}}
-                  {{input type="checkbox" class="toggle" checked=isCompleted}}
-                  <label {{action "editTodo" on="doubleClick"}}>{{title}}</label>
-                  <button {{action "removeTodo"}} class="destroy"></button>
-                {{/if}}
-              </li>
-            {{/each}}
-          </ul>
+          {{ outlet }}
 
           <input type="checkbox" id="toggle-all">
         </section>
 
         <footer id="footer">
           <span id="todo-count">
-            <strong>{{remaining}}</strong> {{inflection}} left
+            <strong>{{ remaining }}</strong> {{ inflection }} left
           </span>
           <ul id="filters">
             <li>
@@ -57,6 +45,22 @@
       <footer id="info">
         <p>Double-click to edit a todo</p>
       </footer>
+    </script>
+
+    <script type="text/x-handlebars" data-template-name="todos/index">
+      <ul id="todo-list">
+        {{#each itemController="todo" }}
+          <li {{ bind-attr class="isCompleted:completed isEditing:editing" }}>
+            {{#if isEditing}}
+              {{ edit-todo class="edit" value=title focus-out="updateTodo" insert-newline="updateTodo" }}
+            {{else}}
+              {{ input type="checkbox" class="toggle" checked=isCompleted }}
+              <label {{ action "editTodo" on="doubleClick" }}>{{ title }}</label>
+              <button {{ action "removeTodo" }} class="destroy"></button>
+            {{/if }}
+          </li>
+        {{/each }}
+      </ul>
     </script>
 
     <script src="js/libs/jquery-1.10.2.min.js"></script>
