modularized routes. Filtered routes use base

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <script src="js/app.js"></script>
     <script src="js/router.js"></script>
     <script src="js/models/todo.js"></script>
+    <script src="js/routes/todos-routes.js"></script>
     <script src="js/controllers/todos_controller.js"></script>
     <script src="js/controllers/todo_controller.js"></script>
     <script src="js/views/edit_todo_view.js"></script>
